fix: BASE64Decoder -> util.Base64 (#9)
* feat: add files relates to OSS

* modify pom.xml

* BASE64Decoder -> util.Base64